criação do serviço de email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.profiles.active=dev
+
+default.sender=camilasoares1507@gmail.com
+default.recipient=camila.soares@muchmore.digital
+
+server.port=8082
