implementação do esqueci senha

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ default.recipient=camila.soares@muchmore.digital
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=60000
 
-server.port=8081
+#server.port=8086
