configuração e envio do projeto para produção

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=dev
+spring.profiles.active=test
+
 
 default.sender=camilasoares1507@gmail.com
 default.recipient=camila.soares@muchmore.digital
@@ -6,4 +7,4 @@ default.recipient=camila.soares@muchmore.digital
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=60000
 
-#server.port=8086
+#server.port=8080
