--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,11 +3,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hiberntrue
-spring.jpa.propertieate.ddl-auto=create
-spring.jpa.show-sql=s.hibernate.format_sql=true
-
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 #Service Email
 spring.mail.host=smtp.gmail.com
