--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 			<version>0.7.0</version>
 		</dependency>
 
-		<dependency>
+		<!--dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk</artifactId>
 			<version>LATEST</version>
@@ -97,7 +97,7 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>LATEST</version>
-		</dependency>
+		</dependency-->
 
 		<dependency>
 			<groupId>org.imgscalr</groupId>
