--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
