--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,11 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
-		<dependency>
+		<!--dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.0</version>
-		</dependency>
+		</dependency-->
 
 
 		<dependency>
