--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 
 default.sender=camilasoares1507@gmail.com
 default.recipient=camila.soares@muchmore.digital
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000
+jwt.expiration=86400000
+
+
 
 #server.port=8080
