--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 
 default.sender=camilasoares1507@gmail.com
-default.recipient=camila.soares@muchmore.digital
+default.recipient=camilasoares1507@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=86400000
