salvando arquivo no S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ default.recipient=camilasoares1507@gmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=86400000
 
-
+aws.access_key_id=AKIAJ5ZDZIMBAZZTVDSQ
+aws.secret_access_key=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
+s3.bucket=spring-ionic-java
+s3.region=sa-east-1
 
 #server.port=8080
