--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:testdb 
+spring.datasource.url=jdbc:h2:~/testdb 
 spring.datasource.username=sa 
 spring.datasource.password=
 
@@ -6,7 +6,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true 
 
 
-Service Email
+#Service Email
 spring.mail.host=smtp.gmail.com
 spring.mail.username=
 spring.mail.password=
