usando padrao de nomes para imagens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,6 @@ aws.secret_access_key=h8hpo4+zLuAthsuMf89a0viLtigL+GSppRJHTy+F
 s3.bucket=spring-ionic-java
 s3.region=sa-east-1
 
+img.prefix.client.profile=cp
+
 #server.port=8080
