--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,12 +4,12 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 
-spring.mail.host=smtp.gmail.com
-spring.mail.username=camilasoares1507@gmail.com
-spring.mail.password=soares1507
-spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.socketFactory.port = 465
-spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback = false
-spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.properties.mail.smtp.ssl.enable = true
+#spring.mail.host=smtp.gmail.com
+#spring.mail.username=camilasoares1507@gmail.com
+#spring.mail.password=soares1507
+#spring.mail.properties.mail.smtp.auth = true
+#spring.mail.properties.mail.smtp.socketFactory.port = 465
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+#spring.mail.properties.mail.smtp.socketFactory.fallback = false
+#spring.mail.properties.mail.smtp.starttls.enable = true
+#spring.mail.properties.mail.smtp.ssl.enable = true
