--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,8 @@ s3.region=sa-east-1
 img.prefix.client.profile=cp
 img.profile.size=200
 
+#Tamanho máxmo para upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 #server.port=8080
