--- a/pom.xml
+++ b/pom.xml
@@ -119,19 +119,18 @@
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>1.0.0</version>
 				<configuration>
-					<imageName>example</imageName>
-					<baseImage>java</baseImage>
-					<entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
-					<!-- copy the service's jar file from target into the root directory 
-						of the image -->
-					<resources>
-						<resource>
-							<targetPath>/</targetPath>
-							<directory>${project.build.directory}</directory>
-							<include>${project.build.finalName}.jar</include>
-						</resource>
-					</resources>
-				</configuration>
+	<imageName>10.10.8.175:5000/${artifactId}:${project.version}</imageName>
+	<dockerHost>https://192.168.99.100:2376</dockerHost>
+	<dockerCertPath>C:\Users\muchmore\.docker\machine\machines\default</dockerCertPath>
+	<dockerDirectory>src/main/resources/docker</dockerDirectory>
+	<resources>
+		<resource>
+			<targetPath>/</targetPath>
+			<directory>${project.build.directory}</directory>
+			<include>*.zip</include>
+		</resource>
+	</resources>
+</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
