--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.camilasoares</groupId>
-    <artifactId>aplicacao-ionic</artifactId>
+    <artifactId>aplicacao-ionic-java</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-    <name>aplicacao-ionic</name>
+    <name>aplicacao-ionic-java</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
@@ -132,7 +131,7 @@
 				</executions>
 				<configuration>
 					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
-					<repository>150787/aplicacao-ionic</repository>
+					<repository>150787/aplicacao-ionic-java</repository>
 					<tag>${project.version}</tag>
 					<buildArgs>
 					  <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
