--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,12 +4,14 @@ spring.datasource.password=
 
 spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.format_sql=true 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 
 #Service Email
 #spring.mail.host=smtp.gmail.com
 #spring.mail.username=camilasoares1507@gmail.com
-#spring.mail.password=soares1507
+#spring.mail.password=soaresxavier
 #spring.mail.properties.mail.smtp.auth= true
 #spring.mail.properties.mail.smtp.socketFactory.port= 465
 #spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
