--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,19 +1,24 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
+#spring.datasource.username=root
+#spring.datasource.password=
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pedidos
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #Service Email
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.googlemail.com
 spring.mail.username=camilasoares1507@gmail.com
-spring.mail.password=soares1507
-spring.mail.properties.mail.smtp.auth= true
-spring.mail.properties.mail.smtp.socketFactory.port= 465
-spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback = false
-spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.properties.mail.smtp.ssl.enable = true
+spring.mail.password=soaresxavier
+spring.mail.properties.mail.smtp.auth=plain
+spring.mail.properties.mail.smtp.socketFactory.port=587
+#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
